untill light box gallery images needs to update

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ $theme-colors: (
   "info": #0dcaf0,
   "warning": #813588,
   "danger": #dc3545,
-  "light": #ffffff,
+  "light": #efefef,
 );
 
 /* import bootstrap to set changes */
@@ -20,6 +20,22 @@ $secondary-color: #EF7B00;
 $white-color: white;
 $black-color: #000;
 $tertiary-color: #813588;
+
+.SRLDownloadButton {
+    display: none !important;
+}
+
+#navbar {
+    .nav-link {
+        padding: 20px 40px;
+        align-items: center;
+        color: $secondary-color;
+        font-weight: 600;
+        &:hover {
+            color: $primary-color;
+        }
+    }
+}
 
 #footer {
   ul {
